# jirafly

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
jirafly/: __init__.py  cli.py  jira_service.py  main.py  models.py  team_config.py  utils.py
