[tool.poetry]
name = "jirafly"
version = "0.1.0"
description = ""
authors = ["Marek Dostál <dstlmrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jira = "^3.8.0"
prettytable = "^3.12.0"
typer = "^0.13.0"
termcolor = "^2.5.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
